# fabriquinha-de-certificados

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env_exemplo  logging.conf  main.py  pyproject.toml  ruff.toml  run-server.py  run-test.sh
.github/workflows/: fluxo_principal.yml
fabriquinha/: __init__.py  ambiente.py  bd.py  main.py  rotas.py
fabriquinha/htmls/: base.html  cert-nao-encontrado.html  comunidade.html  consulte-seu-certificado.html  criar-modelo.html  login.html  raiz.html  testar-html.html  u.html  validar-certificado.html
fabriquinha/migracoes/: env.py  script.py.mako
fabriquinha/migracoes/versions/: 2025-03-12T00:00:00_0.py  2025-03-12T20:37:10_5cef3bd2b99b.py  2025-03-16T17:46:18_87d8d563c2e6.py  2025-04-06T16:55:35_45cf2fcb4fe9.py  2025-04-13T11:26:58_aa6d9ca62274.py  2025-04-13T12:13:31_e055492c587e.py  2025-04-13T15:53:56_afa17d84c7a6.py  2025-04-13T22:08:43_5957dcc61a1e.py
proxy/: traefik-dyna-conf.yaml
tests/: basic_test.py  bd_test.py  conftest.py  test.html
tests/rotas/: comunidade_test.py  criar_modelo_test.py  download_test.py  login_test.py  u_test.py  validar_test.py
